--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-735.5KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-868.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1.18MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-510.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-302.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-438.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇩🇪 德国-2.45MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.52MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-419.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-381.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林), server: 45.144.176.135, port: 3002, type: ss, cipher: aes-256-cfb, password: 36rtuhZfAeUh78Sa}
+  - {name: 🇩🇪 德国-777.7KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇬🇧 英国-565.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-735.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-868.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-510.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-302.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-419.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-381.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
