--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-172.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇫🇷 法国-869.2KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.92MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇩🇪 德国-1.40MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-942.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林), server: 45.144.176.135, port: 3002, type: ss, cipher: aes-256-cfb, password: 36rtuhZfAeUh78Sa}
+  - {name: 🇩🇪 德国-1.87MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-275.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇺🇸 美国-797.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.42MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇩🇪 德国-777.7KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇬🇧 英国-565.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-793.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-320.5KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-378.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-172.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-869.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.92MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-942.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-512.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-797.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.42MB/s(Youtube:不良林)
       - 🇩🇪 德国-777.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-565.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-793.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
